# folder-magic

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.claude/bugs/: 01_test_import_path_incorrect.md  02_file_id_field_optional_instead_required.md  03_missing_google_auth_oauthlib_dependency.md
backend/: __init__.py
backend/app/: __init__.py  config.py  drive_operations.py  main.py  security.py  session.py  tool_schema.py  tools.py
backend/app/agents/: __init__.py  router.py  service.py
backend/app/api/: __init__.py  auth.py  drive.py
backend/app/schemas/: __init__.py  drive.py
backend/app/utils/: __init__.py  drive_descriptions.py
backend/database/: __init__.py  client.py  drive_repository.py  exceptions.py  reference.txt
backend/models/: __init__.py  diff_list.py  operation_result.py
backend/tests/: conftest.py  llm_tool_test.py  test_apply_difflist_to_drive.py  test_drive_operations_build_result.py  test_drive_operations_create_folder.py  test_drive_operations_move.py  test_drive_operations_rename.py  test_drive_repository.py  test_mongodb_integration.py  test_operation_result.py
backend/tests/integration/: README.md  __init__.py  conftest.py  test_batch_processing.py  test_create_folder_operations.py  test_end_to_end.py  test_fixtures.py  test_move_rename_operations.py
frontend/: .env.local  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AgentChatEmbed.tsx  ChatComposer.tsx  ChatTranscript.tsx  DriveList.tsx  (+1 more)
(+8 files in other folders)
